toolkit/themes/pinstripe/global/notification.css
%
include
shared
.
inc
namespace
url
(
"
http
:
/
/
www
.
mozilla
.
org
/
keymaster
/
gatekeeper
/
there
.
is
.
only
.
xul
"
)
;
notification
{
padding
:
3px
3px
4px
;
text
-
shadow
:
none
;
}
notification
[
type
=
"
info
"
]
{
color
:
rgba
(
255
255
255
0
.
95
)
;
background
:
url
(
"
chrome
:
/
/
global
/
skin
/
notification
/
info
-
bar
-
background
.
png
"
)
#
404040
repeat
-
x
top
left
;
border
-
top
:
1px
solid
#
707070
;
border
-
bottom
:
1px
solid
#
2a2a2a
;
}
notification
[
type
=
"
warning
"
]
{
color
:
rgba
(
0
0
0
0
.
95
)
;
background
:
url
(
"
chrome
:
/
/
global
/
skin
/
notification
/
warning
-
bar
-
background
.
png
"
)
#
ffc703
repeat
-
x
top
left
;
border
-
top
:
1px
solid
#
ffe970
;
border
-
bottom
:
1px
solid
#
bf8a01
;
}
notification
[
type
=
"
critical
"
]
{
color
:
rgba
(
255
255
255
0
.
95
)
;
background
:
url
(
"
chrome
:
/
/
global
/
skin
/
notification
/
critical
-
bar
-
background
.
png
"
)
#
980000
repeat
-
x
top
left
;
border
-
top
:
1px
solid
#
e35959
;
border
-
bottom
:
1px
solid
#
5d0000
;
}
.
messageImage
{
width
:
16px
;
height
:
16px
;
margin
:
0
4px
;
}
/
*
Default
icons
for
notifications
*
/
notification
[
type
=
"
info
"
]
.
messageImage
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
global
/
skin
/
notification
/
info
-
icon
.
png
"
)
;
}
notification
[
type
=
"
warning
"
]
.
messageImage
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
global
/
skin
/
notification
/
warning
-
icon
.
png
"
)
;
}
notification
[
type
=
"
critical
"
]
.
messageImage
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
global
/
skin
/
notification
/
error
-
icon
.
png
"
)
;
}
.
notification
-
inner
{
border
:
0
!
important
;
}
.
messageText
{
margin
:
0
3px
!
important
;
padding
:
0
;
font
-
weight
:
bold
;
}
.
messageCloseButton
{
-
moz
-
appearance
:
none
;
padding
:
0
;
margin
:
0
2px
;
list
-
style
-
image
:
url
(
"
chrome
:
/
/
global
/
skin
/
notification
/
close
.
png
"
)
;
border
:
none
;
-
moz
-
image
-
region
:
rect
(
0
16px
16px
0
)
;
}
.
messageCloseButton
>
.
toolbarbutton
-
text
{
display
:
none
;
}
.
messageCloseButton
:
hover
{
-
moz
-
image
-
region
:
rect
(
0
32px
16px
16px
)
;
}
.
messageCloseButton
:
hover
:
active
{
-
moz
-
image
-
region
:
rect
(
0
48px
16px
32px
)
;
}
.
messageCloseButton
:
-
moz
-
focusring
>
.
toolbarbutton
-
icon
{
border
-
radius
:
10000px
;
box
-
shadow
:
0
0
2px
1px
-
moz
-
mac
-
focusring
0
0
0
2px
-
moz
-
mac
-
focusring
inset
;
}
/
*
Popup
notification
*
/
.
popup
-
notification
-
description
{
max
-
width
:
248px
;
}
.
popup
-
notification
-
button
-
container
{
margin
-
top
:
17px
;
}
.
popup
-
notification
-
menubutton
{
-
moz
-
appearance
:
none
;
}
.
popup
-
notification
-
menubutton
:
-
moz
-
focusring
>
.
button
-
menubutton
-
dropmarker
.
popup
-
notification
-
menubutton
>
.
button
-
menubutton
-
button
:
-
moz
-
focusring
{
box
-
shadow
:
focusRingShadow
;
position
:
relative
;
}
.
popup
-
notification
-
menubutton
:
not
(
[
type
=
"
menu
-
button
"
]
)
.
popup
-
notification
-
menubutton
>
.
button
-
menubutton
-
button
.
popup
-
notification
-
menubutton
>
.
button
-
menubutton
-
dropmarker
{
color
:
#
fff
;
text
-
shadow
:
0
-
1px
0
rgba
(
0
0
0
.
5
)
;
border
-
radius
:
12px
;
border
:
1px
solid
rgba
(
0
0
0
.
65
)
;
background
:
-
moz
-
linear
-
gradient
(
rgba
(
110
110
110
.
9
)
rgba
(
70
70
70
.
9
)
49
%
rgba
(
50
50
50
.
9
)
51
%
rgba
(
40
40
40
.
9
)
)
;
box
-
shadow
:
inset
0
1px
0
rgba
(
255
255
255
.
2
)
inset
0
0
1px
rgba
(
255
255
255
.
1
)
0
1px
0
rgba
(
255
255
255
.
1
)
;
background
-
clip
:
padding
-
box
;
background
-
origin
:
padding
-
box
;
}
.
popup
-
notification
-
menubutton
:
not
(
[
type
=
"
menu
-
button
"
]
)
{
padding
:
2px
9px
;
}
.
popup
-
notification
-
menubutton
>
.
button
-
menubutton
-
button
{
-
moz
-
appearance
:
none
;
margin
:
0
;
padding
-
top
:
2px
;
padding
-
bottom
:
2px
;
-
moz
-
padding
-
start
:
8px
;
-
moz
-
padding
-
end
:
5px
;
-
moz
-
border
-
end
:
1px
solid
rgba
(
0
0
0
.
65
)
;
}
.
popup
-
notification
-
menubutton
>
.
button
-
menubutton
-
dropmarker
{
padding
-
top
:
7px
;
padding
-
bottom
:
7px
;
-
moz
-
padding
-
start
:
5px
;
-
moz
-
padding
-
end
:
8px
;
margin
-
top
:
0
;
margin
-
bottom
:
0
;
-
moz
-
margin
-
start
:
-
1px
;
list
-
style
-
image
:
url
(
"
chrome
:
/
/
global
/
skin
/
arrow
/
arrow
-
dn
-
white
.
png
"
)
;
}
.
popup
-
notification
-
menubutton
>
.
button
-
menubutton
-
button
:
-
moz
-
locale
-
dir
(
ltr
)
.
popup
-
notification
-
menubutton
>
.
button
-
menubutton
-
dropmarker
:
-
moz
-
locale
-
dir
(
rtl
)
{
border
-
top
-
right
-
radius
:
0
;
border
-
bottom
-
right
-
radius
:
0
;
}
.
popup
-
notification
-
menubutton
>
.
button
-
menubutton
-
button
:
-
moz
-
locale
-
dir
(
rtl
)
.
popup
-
notification
-
menubutton
>
.
button
-
menubutton
-
dropmarker
:
-
moz
-
locale
-
dir
(
ltr
)
{
border
-
top
-
left
-
radius
:
0
;
border
-
bottom
-
left
-
radius
:
0
;
}
.
popup
-
notification
-
menubutton
:
not
(
[
type
=
"
menu
-
button
"
]
)
:
hover
:
active
.
popup
-
notification
-
menubutton
>
.
button
-
menubutton
-
button
:
hover
:
active
.
popup
-
notification
-
menubutton
[
open
=
"
true
"
]
>
.
button
-
menubutton
-
dropmarker
{
background
:
-
moz
-
linear
-
gradient
(
rgba
(
40
40
40
.
9
)
rgba
(
70
70
70
.
9
)
)
;
box
-
shadow
:
inset
0
0
3px
rgba
(
0
0
0
.
2
)
inset
0
1px
7px
rgba
(
0
0
0
.
4
)
0
1px
0
rgba
(
255
255
255
.
1
)
;
}
.
popup
-
notification
-
closebutton
{
-
moz
-
margin
-
end
:
-
12px
;
margin
-
top
:
-
13px
;
}
.
popup
-
notification
-
closeitem
>
.
menu
-
iconic
-
left
{
display
:
none
;
}

